--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^0.13.4
   shared_preferences: ^2.0.15
   intl: ^0.17.0
+  sensors_plus: ^1.3.2
+  flutter_compass: ^0.7.0
+  flutter_svg: ^1.1.1+1
+  flutter_qiblah: '2.0.2'
+  flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +61,10 @@ flutter_native_splash:
   color: "#ffffff"
   image: assets/mosque.png
 # The following section is specific to Flutter packages.
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/mosque.png"
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -66,6 +75,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/mosque.png
+    - assets/compassS.svg
+    - assets/needleS.svg
+    - assets/Qibla.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
